support for autobid
git-svn-id: file:///semplestb/final_repo@3908 02200ff9-b5b2-46f0-9171-221b09c08c7b